# ScmpRescale

./: CMakeLists.txt
nfa_gl/: CMakeLists.txt  DdsFile.cpp  DdsFile.h
scmp/: CMakeLists.txt  io.cpp  io.h  scmapformat.txt  scmp.cpp  scmp.h
scmp/test/: CMakeLists.txt  test_scmp.cpp
scmp_rescale/: CMakeLists.txt  scmp_rescale_app.cpp  scmp_rescale_window.cpp  scmp_rescale_window.h  scmp_rescale_window.ui
